# Rotator-Bridge

./: CMakeLists.txt  LICENSE  README.md  test.py
include/: RotatorCommon.hpp
include/rotators/: Cam.hpp  CamPTZ.hpp  rotctld.hpp
src/: cliMain.cpp  main.cpp
src/rotators/: Cam.cpp  CamPTZ.cpp  rotctld.cpp
